bin_PROGRAMS=fileschanged
fileschanged_SOURCES= \
	fileschanged.c fileschanged.h \
	opts.c opts.h \
	node.c node.h \
	xrealpath.c xrealpath.h \
	list.c list.h \
	listdirs.c listdirs.h \
	monitor.c monitor.h \
	filelist.c filelist.h \
	handlers.c handlers.h \
	wl.c wl.h gettext.h
localdir = $(datadir)/locale
AM_CFLAGS = -Wall -Werror -DLOCALEDIR=\"$(localdir)\"
